Fix broken css.

--- a/client/static/client/css/manage_exercises.css
+++ b/client/static/client/css/manage_exercises.css
@@ -2,9 +2,9 @@
 
 body {
     font-family: 'Manrope', sans-serif;
-    background-color: #f8f9fa;
+    background-color: #ffffff;
     margin: 0;
-    padding: 0;
+    padding-left: 40px;
 }
 
 /* Page Container */
