--- a/client/static/client/css/user_details.css
+++ b/client/static/client/css/user_details.css
@@ -84,7 +84,7 @@
     align-items: center;
     justify-content: center; 
     padding: 10px;
-    background: #FFA726; 
+    background: #f2f20557; 
     border-radius: 12px;
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
     text-align: center;
@@ -123,11 +123,10 @@
 
 
 .module-card:nth-child(odd) {
-    background: #73C4FD;
+    background: #f2f20557;
 }
 .module-card:nth-child(even) {
-    background: #0148FD;
-    color: #e0e0e0;
+    background: #f2f20557;
 }
 
 .module-card h3 {
@@ -157,7 +156,7 @@
 
 .progress-fill {
     height: 100%;
-    background: linear-gradient(90deg, #007bff, #0056b3); 
+    background: linear-gradient(90deg, #F24505, #f58961); 
     border-radius: 6px;
     transition: width 0.5s ease-in-out;
 }
