--- a/client/static/client/css/video_detail.css
+++ b/client/static/client/css/video_detail.css
@@ -1,4 +1,5 @@
-  
+@import url('https://fonts.googleapis.com/css2?family=Manrope:wght@400;700&display=swap');
+ 
 .video-container {
     width: 800px;
     margin: 70px 50px 50px 240px;
@@ -31,27 +32,27 @@
     height: 405px;
     border-radius: 10px;
     overflow: hidden;
-    border: 4px solid #ff6b00; 
+    border: 4px solid #F24505; 
     margin: 20px auto;
 }
 
 
 .back-btn {
-    display: inline-block;
-    margin-top: 20px;
-    padding: 12px 24px;
+    background-color: #F24505;
+    color: white;
+    padding: 10px 15px;
+    text-decoration: none;
     font-size: 16px;
     font-weight: bold;
-    text-decoration: none;
-    color: #fff;
-    background: #ff6b00;
-    border-radius: 8px;
-    transition: all 0.3s ease-in-out;
-    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+    border: none;
+    border-radius: 20px;
+    cursor: pointer;
+    transition: background 0.3s, transform 0.2s;
 }
 
 .back-btn:hover {
-    background:  #ff6b00;
+    background: #D43802;
+    color: white;
 }
 
 
